    * 1010 chrony: new check for NTP synchronization via chrony on Linux...
    * 1011 ibm_svc_systemstats.disk_latency: introduce levels for alerting...
    * 1372 cisco_vss: new check for monitoring state of Cisco Virtual Switches
    * 0648 brocade_fcport: new speed calculation of isl_ports...
    * 0649 f5_bigip_pool: check now also prints the node names of down nodes
    * 1051 FIX: tcp_conn_stats: fix missing performance data...
    * 1142 FIX: winperf_ts_sessions: fix computation, check has never really worked
    * 1090 FIX: zfsget: fixed exception which happened on incomplete zfs entries
    * 0187 FIX: hp_proliant_power: Fixed Wato configuration
    * 0192 FIX: oracle_rman_backups: Not longer try to make a inventory for broken plugin outputs
    * 0194 FIX: raritan_pdu_inlet: Check now outputs the correct values...
            NOTE: Please refer to the migration notes!
    * 1071 FIX: oracle_rman_backups: Only inventorize ARCHIVELOG / DB FULL / DB INCR entries...
    * 0195 FIX: fc_port: Check temporary disabled cause of problems with automatic detection...
            NOTE: Please refer to the migration notes!
    * 1152 FIX: mk-job: The check now captures currently running jobs and their start time...
    * 0198 FIX: cisco_temp_sensor: Removed dicey detection for temperature value....
    * 0645 FIX: brocade_fcport: since in newer firmware (7.*) swFCPortSpeed is deprecated, we then calculate port speed from IF-MIB::ifHighSpeed
    * 1097 FIX: windows_agent: preventing missing agent sections on first query...
    * 1009 FIX: df: deal with space in file system type for PlayStation file system...
    * 1098 FIX: esx_vsphere_counters.diskio: Now reports unknown when counter data is missing
    * 1143 FIX: dell_powerconnect_temp: fix configuration via WATO...
    * 1144 FIX: blade_bx_temp, dell_chassis_temp, emerson_temp, ibm_svc_enclosurestats, ups_bat_temp: rename service description...
            NOTE: Please refer to the migration notes!