@@ -31,6 +31,8 @@
     * 1372 cisco_vss: new check for monitoring state of Cisco Virtual Switches
     * 0648 brocade_fcport: new speed calculation of isl_ports...
     * 0649 f5_bigip_pool: check now also prints the node names of down nodes
+    * 1374 arc_raid_status: moved plugin into main Linux agent...
+            NOTE: Please refer to the migration notes!
     * 1051 FIX: tcp_conn_stats: fix missing performance data...
     * 1142 FIX: winperf_ts_sessions: fix computation, check has never really worked
     * 1090 FIX: zfsget: fixed exception which happened on incomplete zfs entries
